# piland

./: .gitignore  README.md
SDL2-2.0.5/: configure
board/raspbery_pi/: raspberrypi.config-nogtk  users.txt
board/raspbery_pi/rootfs-overlay/etc/init.d/: S22expand-rootpart
board/raspbery_pi/rootfs-overlay/etc/profile.d/: golang.sh
board/raspbery_pi/rootfs-overlay/etc/sudoers.d/: sudoers
buildroot-2017.08/: Config.in.legacy
buildroot-2017.08-rc3/: .config
buildroot-2017.08-rc3/docs/manual/: manual.html  manual.text
buildroot-2017.08-rc3/package/: Config.in
buildroot-2017.08-rc3/package/lua-love/: Config.in  lua-love.mk
buildroot-2017.08-rc3/package/qt5/: Config.in
buildroot-2017.08-rc3/package/qt5/qt5wayland/: Config.in  qt5wayland.mk
buildroot-2017.08-rc3/package/rpi-firmware/: config.txt
buildroot-2017.08-rc3/package/sdl2/: sdl2.mk
buildroot-2017.08/package/gcc/: Config.in.host
buildroot-2017.08/package/gcc/gcc-final/: gcc-final.mk
buildroot-2017.08/package/wayland-egl/: Config.in  wayland-egl.mk
buildroot-2017.08/package/weston/: Config.in  weston.mk
package/: Config.in
package/wayland-egl/: wayland-egl.mk
package/weston/: Config.in  weston.mk
wayland-egl/: Makefile.am  Makefile.in  configure  configure.ac
wayland-egl/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
wayland-egl/src/: Makefile.am  Makefile.in  wayland-egl-priv.h  wayland-egl.c  wayland-egl.pc.in
weston-1.11.0/: Makefile.am
